sửa lại view version 2 + đã fix lại search ăn khoảng trắng rồi

--- a/ProjectDiamondShop/Views/Introduce/Asscher.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Asscher.cshtml
@@ -16,7 +16,7 @@
         }
 
         body {
-            background-color: #E9F2EB;
+            background-color: #fff;
             color: #333;
             display: flex;
             flex-direction: column;
