--- a/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
+++ b/ProjectDiamondShop/Views/Shared/_LayoutPage1.cshtml
@@ -11,12 +11,10 @@
             background: #fff !important;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 0.5rem 1rem;
-            border-radius: 30px;
             margin-bottom: 20px;
             transition: top 0.3s;
             margin: 0 auto;
-            max-width: 95%;
-        }
+            }
 
             .navbar .navbar-brand {
                 color: #28a745 !important;
@@ -118,7 +116,7 @@
         body {
             display: flex;
             flex-direction: column;
-            background-color: #E9F2EB;
+            background-color: #fff;
         }
 
         .container {
