--- a/ProjectDiamondShop/Views/Home/HomePage.cshtml
+++ b/ProjectDiamondShop/Views/Home/HomePage.cshtml
@@ -16,7 +16,7 @@
         }
 
         body {
-            background-color: #E9F2EB;
+            background-color: #fff;
             color: #333;
             display: flex;
             flex-direction: column;
@@ -31,11 +31,9 @@
             background: #fff !important;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 0.5rem 1rem;
-            border-radius: 30px;
             margin-bottom: 20px;
             transition: top 0.3s;
             margin: 0 auto;
-            max-width: 95%;
         }
 
             .navbar .navbar-brand {
@@ -146,7 +144,7 @@
             border: 1px solid rgba(0, 0, 0, 0.1);
             border-radius: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            background-color: #fff8ef;
+            background-color: #F8F8F8;
             transition: transform 0.3s, box-shadow 0.3s;
             margin-bottom: 30px;
             text-align: center;
@@ -183,7 +181,7 @@
 
             .diamond-section .view-more {
                 font-weight: bold;
-                background-color: #FFF6D9;
+                background-color: #FFF;
                 color: black;
                 padding: 10px 15px;
                 border-radius: 5px;
