--- a/ProjectDiamondShop/Views/Introduce/Princess.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Princess.cshtml
@@ -16,7 +16,7 @@
         }
 
         body {
-            background-color: #E9F2EB;
+            background-color: #fff;
             color: #333;
             display: flex;
             flex-direction: column;
