--- a/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
+++ b/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
@@ -21,6 +21,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link href="~/Content/ProductCss/SliderMaxMin.css" rel="stylesheet" />
+    <link href="~/Content/ProductCss/style.css" rel="stylesheet" />
     <style>
         * {
             margin: 0;
@@ -30,7 +32,7 @@
         }
 
         body {
-            background-color: #E9F2EB;
+            background-color: #FFF;
             color: #333;
             display: flex;
             flex-direction: column;
@@ -45,11 +47,9 @@
             background: #fff !important;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 0.5rem 1rem;
-            border-radius: 30px;
             margin-bottom: 20px;
             transition: top 0.3s;
             margin: 0 auto;
-            max-width: 95%;
         }
 
             .navbar .navbar-brand {
@@ -331,6 +331,17 @@
 
         .slider-data .form-group {
             width: 48%;
+        }
+
+        input[type="range"] {
+            width: 40.5%;
+        }
+
+        a {
+            text-decoration: none;
+            color: #e0e0e0;
+            font-size: 16px;
+            font-weight: 400;
         }
     </style>
 </head>
