--- a/ProjectDiamondShop/Views/Introduce/Oval.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Oval.cshtml
@@ -16,7 +16,7 @@
         }
 
         body {
-            background-color: #E9F2EB;
+            background-color: #fff;
             color: #333;
             display: flex;
             flex-direction: column;
@@ -389,10 +389,10 @@
         </div>
     </div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
         $(document).ready(function () {
             var successMessage = '@ViewBag.SuccessMessage';
             var userName = '@ViewBag.UserName';
@@ -423,6 +423,6 @@
             console.log('Close button clicked');
             $('#loginSuccessModal').modal('hide');
         });
-        </script>
+    </script>
 </body>
 </html>
