--- a/ProjectDiamondShop/Views/ForgotPassword/EnterResetCode.cshtml
+++ b/ProjectDiamondShop/Views/ForgotPassword/EnterResetCode.cshtml
@@ -4,30 +4,9 @@
 }
 
 <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-<style>
-    body {
-        background-color: #3AAFA9;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-    }
+<link rel="stylesheet" href="~/Content/ForgotPassword.css">
 
-    .img-fluid-custom {
-        max-height: 50%;
-        object-fit: contain;
-        display: block;
-        margin: 0 auto;
-    }
 
-    .card {
-        margin-top: 100px;
-        margin-bottom: 66px;
-    }
-
-    .container {
-        flex: 1;
-    }
-</style>
 <section>
     <div class="container">
         <div class="row justify-content-center">
