--- a/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
+++ b/ProjectDiamondShop/Views/Diamonds/Diamonds.cshtml
@@ -21,284 +21,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link href="~/Content/ProductCss/StyleSheet1.css" rel="stylesheet" />
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            background-color: #FFF;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        main {
-            flex: 1;
-        }
-
-        .navbar {
-            background: #fff !important;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 0.5rem 1rem;
-            margin-bottom: 20px;
-            transition: top 0.3s;
-            margin: 0 auto;
-        }
-
-            .navbar .navbar-brand {
-                color: #28a745 !important;
-                font-weight: bold;
-                display: flex;
-                align-items: center;
-            }
-
-                .navbar .navbar-brand img {
-                    height: 40px;
-                    border-radius: 50%;
-                    margin-right: 10px;
-                }
-
-            .navbar .nav-link {
-                color: #333 !important;
-                font-weight: bold;
-                margin-right: 20px;
-                position: relative;
-                padding-bottom: 5px;
-            }
-
-                .navbar .nav-link:hover,
-                .navbar .nav-link.active {
-                    color: #000 !important;
-                }
-
-                .navbar .nav-link:not(.dropdown-toggle)::after {
-                    content: '';
-                    display: block;
-                    width: 0;
-                    height: 2px;
-                    background: #28a745;
-                    transition: width .3s;
-                    position: absolute;
-                    bottom: 0;
-                    left: 0;
-                }
-
-                .navbar .nav-link:not(.dropdown-toggle):hover::after,
-                .navbar .nav-link.not(.dropdown-toggle).active::after {
-                    width: 100%;
-                }
-
-            .navbar .nav-item .fa {
-                font-size: 20px;
-                color: #333;
-            }
-
-            .navbar .login-btn {
-                background: #28a745;
-                color: #fff !important;
-                border-radius: 50px;
-                padding: 0.5rem 1rem;
-                font-weight: bold;
-                transition: background-color 0.3s;
-            }
-
-                .navbar .login-btn:hover {
-                    background: #218838;
-                }
-
-        .navbar-toggler {
-            border: none;
-        }
-
-            .navbar-toggler:focus {
-                outline: none;
-            }
-
-        .nav-item .dropdown-toggle {
-            position: relative;
-            display: flex;
-            align-items: center;
-        }
-
-        .dropdown-menu {
-            position: absolute;
-            transform: translate3d(0px, 0px, 0px);
-            border: none;
-            background: none;
-        }
-
-        .dropdown-toggle::after {
-            margin-left: 0.5rem;
-            vertical-align: 0.1em;
-        }
-
-        .navbar .nav-item.dropdown .dropdown-menu {
-            top: 100%;
-            left: 0;
-            margin-top: 0.5rem;
-            background-color: #FDF4F3;
-            min-width: 150%;
-        }
-
-        @@media (max-width: 992px) {
-            .navbar-collapse {
-                justify-content: flex-start;
-            }
-
-            .navbar-nav {
-                flex-direction: column;
-                align-items: flex-start;
-                width: 100%;
-                text-align: right;
-            }
-
-            .navbar .nav-link {
-                margin-right: 0;
-                margin-bottom: 10px;
-            }
-
-            .navbar .login-btn {
-                margin-bottom: 10px;
-            }
-
-            .navbar .nav-item.dropdown .nav-link {
-                margin-right: 0;
-                margin-bottom: 10px;
-            }
-        }
-
-        .filter-container {
-            background-color: #f9f9f9;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-            margin-top: 100px;
-        }
-
-            .filter-container label {
-                font-weight: bold;
-            }
-
-        .slider-container {
-            margin-bottom: 20px;
-        }
-
-        .row {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .col-lg-4 {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        .footer {
-            background-color: #fff;
-            padding: 20px 0;
-            text-align: center;
-            color: #333;
-            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-            .footer a {
-                color: #00509e;
-                text-decoration: none;
-                margin: 0 10px;
-            }
-
-                .footer a:hover {
-                    color: #003f7d;
-                    text-decoration: underline;
-                }
-
-        .pagination {
-            display: flex;
-            justify-content: center;
-            list-style: none;
-            padding: 0;
-        }
-
-            .pagination .page-item {
-                margin: 0 5px;
-            }
-
-                .pagination .page-item .btn-link {
-                    color: #00509e;
-                    text-decoration: none;
-                    padding: 5px 10px;
-                    border-radius: 5px;
-                    transition: background-color 0.3s;
-                }
-
-                    .pagination .page-item .btn-link:hover {
-                        background-color: #003f7d;
-                        color: #fff;
-                    }
-
-                .pagination .page-item.active .btn-link {
-                    background-color: #003f7d;
-                    color: #fff;
-                }
-
-            .pagination .btn-link.selected {
-                background-color: #003f7d;
-                color: #fff;
-            }
-
-        #paginationForm {
-            display: flex;
-        }
-
-        .range_container {
-            position: relative;
-            margin-bottom: 20px;
-        }
-
-        .slider-values {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 10px;
-        }
-
-            .slider-values input {
-                display: inline-block;
-                width: 45%;
-                text-align: center;
-                background-color: #f8f9fa;
-                padding: 5px;
-                border-radius: 5px;
-                border: 1px solid #ced4da;
-            }
-
-        .ir246-search-noUiSlider {
-            margin-bottom: 20px;
-        }
-
-        .slider-data .form-group {
-            width: 48%;
-        }
-
-        input[type="range"] {
-            width: 40.5%;
-        }
-
-        a {
-            text-decoration: none;
-            color: #e0e0e0;
-            font-size: 16px;
-            font-weight: 400;
-        }
-    </style>
+    <link href="~/Content/Diamonds/Diamonds.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -453,18 +176,19 @@
         </div>
         <section>
             <div class="container">
-
-                    <div class="row">
-                        @foreach (var item in Model)
-                        {
-                            string[] imagepart = item.diamondImagePath.Split('|');
-
+                <div class="row">
+                    @foreach (var item in Model)
+                    {
+                        string[] imagepart = item.diamondImagePath.Split('|');
                         <div class="col-md-3 col-sm-6" style="margin-top: 20px;">
                             <div class="product-grid6">
                                 <div class="product-image6">
                                     <a href="@Url.Action("ViewDiamond", "Diamonds", new { id = item.diamondID })">
                                         <img class="pic-1" src="@imagepart[0]">
                                     </a>
+                                    <ul class="social">
+                                        <li><a href="@Url.Action("ViewDiamond", "Diamonds", new { id = item.diamondID })" data-tip="View More"><i class="fa fa-search"></i></a></li>
+                                    </ul>
                                 </div>
                                 <div class="product-content">
                                     <h3 class="title"><a href="@Url.Action("ViewDiamond", "Diamonds", new { id = item.diamondID })">@item.diamondName</a></h3>
@@ -472,13 +196,10 @@
                                         @item.diamondPrice
                                     </div>
                                 </div>
-                                <ul class="social">
-                                    <li><a href="@Url.Action("ViewDiamond", "Diamonds", new { id = item.diamondID })" data-tip="View More"><i class="fa fa-search"></i></a></li>
-                                </ul>
                             </div>
                         </div>
-                        }
-                    </div>
+                    }
+                </div>
             </div>
         </section>
 
@@ -618,11 +339,8 @@
         }
 
         function setAreaPrice() {
-            rangePrice.style.left = `${((minPriceVal.value - sliderMinValuePrice) / (sliderMaxValuePrice - sliderMinValuePrice)) * 100
-                }%`;
-            rangePrice.style.right = `${100 -
-                ((maxPriceVal.value - sliderMinValuePrice) / (sliderMaxValuePrice - sliderMinValuePrice)) * 100
-                }%`;
+            rangePrice.style.left = `${((minPriceVal.value - sliderMinValuePrice) / (sliderMaxValuePrice - sliderMinValuePrice)) * 100}%`;
+            rangePrice.style.right = `${100 - ((maxPriceVal.value - sliderMinValuePrice) / (sliderMaxValuePrice - sliderMinValuePrice)) * 100}%`;
             minTooltipPrice.style.left = (minPriceVal.value / sliderMaxValuePrice) * 100 + "%";
             maxTooltipPrice.style.right = 100 - (maxPriceVal.value / sliderMaxValuePrice) * 100 + "%";
         }
@@ -685,11 +403,8 @@
         }
 
         function setAreaCarat() {
-            rangeCarat.style.left = `${((minCaratVal.value - sliderMinValueCarat) / (sliderMaxValueCarat - sliderMinValueCarat)) * 100
-                }%`;
-            rangeCarat.style.right = `${100 -
-                ((maxCaratVal.value - sliderMinValueCarat) / (sliderMaxValueCarat - sliderMinValueCarat)) * 100
-                }%`;
+            rangeCarat.style.left = `${((minCaratVal.value - sliderMinValueCarat) / (sliderMaxValueCarat - sliderMinValueCarat)) * 100}%`;
+            rangeCarat.style.right = `${100 - ((maxCaratVal.value - sliderMinValueCarat) / (sliderMaxValueCarat - sliderMinValueCarat)) * 100}%`;
             minTooltipCarat.style.left = (minCaratVal.value / sliderMaxValueCarat) * 100 + "%";
             maxTooltipCarat.style.right = 100 - (maxCaratVal.value / sliderMaxValueCarat) * 100 + "%";
         }
