--- a/ProjectDiamondShop/Views/ForgotPassword/ForgotPassword.cshtml
+++ b/ProjectDiamondShop/Views/ForgotPassword/ForgotPassword.cshtml
@@ -3,37 +3,8 @@
     Layout = "~/Views/Shared/_LayoutPage1.cshtml";
 }
 <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-<style>
-    body {
-        background-color: #3AAFA9;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-    }
+<link rel="stylesheet" href="~/Content/ForgotPassword.css">
 
-    .auth-links {
-        display: flex;
-        justify-content: center;
-        gap: 10px;
-        margin-top: 10px;
-    }
-
-    .img-fluid-custom {
-        max-height: 50%;
-        object-fit: contain;
-        display: block;
-        margin: 0 auto;
-    }
-
-    .container {
-        flex: 1;
-    }
-
-    .card {
-        margin-top: 100px;
-        margin-bottom: 66px;
-    }
-</style>
 <section>
     <div class="container">
         <div class="row justify-content-center">
